namespace-marcela.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mmosino
  labels:
    api: reticula-api-des
