api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reticula-service
  labels:
    api: reticula-api-des
    rol: web-service
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    api: reticula-api-des
    rol: web-service
    tier: backend
