bd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reticula-mysql
  labels:
    api: reticula-api-des
    rol: database
    tier: backend
spec:
  ports:
  - port: 3306
  selector:
    api: reticula-api-des
    rol: database
    tier: backend
